@@ -211,13 +211,9 @@ function highlight_friends_want(node, appid) {
 	});
 }
 
-function highlight_friends_own(node, appid) {
+function tag_friends_own(node, appid) {
 	storage.get(function(settings) {
-		node.classList.add("es_highlight_friends_own");
-
-		if (settings.highlight_friends_own === undefined) { settings.highlight_friends_own = false; storage.set({'highlight_friends_own': settings.highlight_friends_own});}
-		if (settings.highlight_friends_own_color === undefined) { settings.highlight_friends_own_color = "#5b9504"; storage.set({'highlight_friends_own_color': settings.highlight_friends_own_color});}
-		if (settings.highlight_friends_own) highlight_node(node, settings.highlight_friends_own_color);
+		node.classList.add("es_tag_friends_own");
 
 		if (settings.tag_friends_own === undefined) { settings.tag_friends_own = true; storage.set({'tag_friends_own': settings.tag_friends_own});}
 		if (settings.tag_friends_own_color === undefined) { settings.tag_friends_own_color = "#5b9504"; storage.set({'tag_friends_own_color': settings.tag_friends_own_color});}
@@ -225,6 +221,20 @@ function highlight_friends_own(node, appid) {
 			node,
 			localized_strings[language].tag_friends_own.replace("__appid__", appid).replace("__friendcount__", getValue(appid + "friendsown")),
 			settings.tag_friends_own_color
+		);
+	});
+}
+
+function tag_friends_rec(node, appid) {
+	storage.get(function(settings) {
+		node.classList.add("es_tag_friends_rec");
+
+		if (settings.tag_friends_rec === undefined) { settings.tag_friends_rec = true; storage.set({'tag_friends_rec': settings.tag_friends_rec});}
+		if (settings.tag_friends_rec_color === undefined) { settings.tag_friends_rec_color = "#2e3d54"; storage.set({'tag_friends_rec_color': settings.tag_friends_rec_color});}
+		if (settings.tag_friends_rec) add_tag(
+			node,
+			localized_strings[language].tag_friends_rec.replace("__appid__", appid).replace("__friendcount__", getValue(appid + "friendsrec")),
+			settings.tag_friends_rec_color
 		);
 	});
 }
@@ -2572,6 +2582,7 @@ function get_app_details(appids) {
 
 					if (app_data.data.friendswant) setValue(appid + "friendswant", app_data.data.friendswant.length);
 					if (app_data.data.friendsown) setValue(appid + "friendsown", app_data.data.friendsown.length);
+					if (app_data.data.recommendations.totalfriends > 0) setValue(appid + "friendsrec", app_data.data.recommendations.totalfriends);
 				}
 				// Time updated, for caching.
 				setValue(appid, parseInt(Date.now() / 1000, 10));
@@ -2638,7 +2649,8 @@ function highlight_app(appid, node) {
 		if (getValue(appid + "guestpass")) highlight_inv_guestpass(node);
 		if (getValue(appid + "coupon")) highlight_coupon(node);
 		if (getValue(appid + "friendswant")) highlight_friends_want(node, appid);
-		if (getValue(appid + "friendsown")) highlight_friends_own(node, appid);
+		if (getValue(appid + "friendsown")) tag_friends_own(node, appid);
+		if (getValue(appid + "friendsrec")) tag_friends_rec(node, appid);
 	});
 }
 
