@@ -25,6 +25,7 @@
             options_friends_wishlist: "Items Your Friends Have Wishlisted",
 			options_excludef2p: "Exclude Free To Play Games From Highlighting",
 			options_friends_own: "Items Your Friends Own",
+			options_friends_rec: "Items Your Friends Recommend",
 			options_hide_early_access: "Early Access Items in New Releases",
             options_hide_install: "Hide \"Install Steam\" button",
 			options_send_age_info: "Automatically send age verification when requested",
@@ -78,6 +79,7 @@
             tag_inv_guestpass: "Guestpass",
             tag_friends_want: "<a href=\"http://steamcommunity.com/my/friendsthatplay/__appid__\">__friendcount__ wish for</a>",
 			tag_friends_own: "__friendcount__ own",
+			tag_friends_rec: "<a href=\"http://store.steampowered.com/recommended/byfriends/__appid__\">__friendcount__ recommend",
             inventory_market_text: "Show Market Price on Inventory Page (Experimental!)",
             credits: "Credits",
             stores: "Stores",
