@@ -286,6 +286,21 @@
 					<button id="tag_friends_own_color_default" class="btn">Default</button>
 				</td>
 			</tr>
+			
+			<tr>
+				<td>
+					<input type="checkbox" id="tag_friends_rec">
+				</td>
+				<td height=30>
+					<div id="tag_friends_rec_text" class="text">Items Your Friends Recommend</div>
+				</td>
+				<td>
+					<input type="color" id="tag_friends_rec_color" class="colorbutton">
+				</td>
+				<td>
+					<button id="tag_friends_rec_color_default" class="btn">Default</button>
+				</td>
+			</tr>
 
 			<tr><td>&nbsp;</td></tr>
 			
