@@ -1,6 +1,7 @@
 v4.8
 -----
 + Added option to exclude Free To Play games from being highlighted
++ Added new tag: "friends recommend" which links to the recommendation page
 : Fixed a bug where "Compare" links were only showing if your language was English
 
 v4.7.1
